--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -53,3 +53,15 @@ authors:
     coi:
       string: "None"
       lastapproved: !!str 2020-03-23
+  -
+    github: juliettemarie0405
+    name: Juliette Rando
+    initials: JR
+    email: jrando@pennmedicine.upenn.edu
+    contributions:
+      - Methodology 
+    affiliations:
+      - Department of Medicine, Division of Hematology/Oncology, Perelman School of Medicine, University of Pennsylvania, Philadelphia, Pennsylvania, United States of America
+    coi:
+      string: "None"
+      lastapproved: !!str 2020-03-23
